# IEEE_1588_2019

./: .gitignore  BMCA_STATE_MACHINE_TEST_REPORT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INSTALL.md  PORTING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SUBMODULE_READINESS_CHECKLIST.md  TEST_FIXES_SUMMARY.md  VERIFICATION_EVIDENCE.md  annotated.html  annotated_dup.js  classes.html  config.py  dir_000001_000003.html  dir_000002_000003.html  dir_000005_000003.html  dir_000008_000003.html  dir_000008_000005.html  dir_000009_000003.html  dir_000011_000008.html  dir_1036706e55c22cab35bc1c58ee689f1d.html  dir_1036706e55c22cab35bc1c58ee689f1d_dep.map  dir_1036706e55c22cab35bc1c58ee689f1d_dep.md5  dir_28a1ad56eaeea7cbf3a9fa00495e4078.html  dir_28a1ad56eaeea7cbf3a9fa00495e4078.js  dir_28a1ad56eaeea7cbf3a9fa00495e4078_dep.map  dir_28a1ad56eaeea7cbf3a9fa00495e4078_dep.md5  dir_42aa6b36182bdbac95100b87ea84c3b9.html  dir_42aa6b36182bdbac95100b87ea84c3b9.js  dir_42aa6b36182bdbac95100b87ea84c3b9_dep.map  dir_42aa6b36182bdbac95100b87ea84c3b9_dep.md5  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2_dep.map  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2_dep.md5  dir_5257f13b932f78dcb9b60093e3f07c14.html  (+141 more)
05-implementation/tests/: CMakeLists.txt  test_acceptance_convergence_performance.cpp  test_acceptance_multi_domain_cmlds.cpp  test_acceptance_p2p_enforcement.cpp  test_acceptance_path_trace_continuity.cpp  test_acceptance_timestamp_accuracy.cpp  test_adrs_presence.cpp  test_announce_propagation_red.cpp  test_api_docs_presence.cpp  test_bmca_basic.cpp  test_bmca_diagnostic.cpp  test_bmca_edges.cpp  test_bmca_forced_tie_passive_red.cpp  test_bmca_priority_order_red.cpp  test_bmca_role_assignment.cpp  test_bmca_role_selection_red.cpp  test_bmca_selection_list.cpp  test_bmca_tie_passive.cpp  test_boundary_clock_queries.cpp  test_boundary_clock_routing.cpp  test_build_system_presence.cpp  test_calculate_offset_and_delay.cpp  test_configuration_setters.cpp  test_datasets_accessors_red.cpp  test_delay_resp_processing.cpp  test_dependency_injection_compile.cpp  test_example_app_presence.cpp  test_fault_injection_bmca.cpp  test_fault_injection_offset.cpp  test_foreign_master_overflow.cpp  test_getting_started_and_ci_presence.cpp  test_health_heartbeat.cpp  test_health_selftest.cpp  test_interoperability_evidence.cpp  test_master_delay_response.cpp  test_message_bodies_validation.cpp  test_message_header_validation.cpp  test_multi_instance_bmca_sync.cpp  test_no_buffer_overruns.cpp  test_offset_calculation.cpp  (+13 more)
06-integration/integration-tests/: CMakeLists.txt  README.md  test_bmca_runtime_integration.cpp  test_boundary_clock_integration.cpp  test_end_to_end_integration.cpp  test_error_recovery_integration.cpp  test_health_aggregation_integration.cpp  test_message_flow_integration.cpp  test_performance_integration.cpp  test_servo_behavior_integration.cpp  test_sync_accuracy_integration.cpp
docs/: CI_  (+7 more)
examples/: CMakeLists.txt  ESP32_PTP_QUICK_START.md  MULTI_SOURCE_TIME_SYNC_GUIDE.md  NTP_DCF77_IMPLEMENTATION_COMPLETE.md  TIME_SOURCE_INTEGRATION_GUIDE.md
examples/01-basic-ptp-slave/: CMakeLists.txt  README.md  basic_ptp_slave.cpp  minimal_hal.cpp  minimal_hal.hpp
examples/02-bmca-integration/: CMakeLists.txt  README.md  bmca_integration.cpp
examples/03-hal-implementation-template/: CMakeLists.txt  README.md  hal_template.cpp  hal_template.hpp  porting_checklist.md
examples/04-gps-nmea-sync/: CLOCK_QUALITY_MANAGEMENT.md  CMakeLists.txt  GPS_BMCA_INTEGRATION_TEST_REPORT.md  GPS_NMEA_Integration_Spec.md  GPS_NMEA_Specification_Refinement.md  HARDWARE_TESTING_COMPLETE_SUMMARY.md  HARDWARE_TESTING_QUICK_START.md  HARDWARE_TEST_REPORT.md  HARDWARE_TEST_RESULTS.md  HARDWARE_VALIDATION_GUIDE.md  INTEGRATION_COMPLETE_SUMMARY.md  PPS_IMPLEMENTATION_STATUS.md  PPS_TESTING_STRATEGY.md  README.md  gps_nmea_sync_example.cpp  gps_ptp_sync_example.cpp  gps_time_converter.cpp  gps_time_converter.hpp  hardware-test-checklist.ps1  nmea_parser.cpp  nmea_parser.hpp  pps_detector.cpp  pps_detector.hpp  serial_hal_esp32.cpp  serial_hal_interface.hpp  serial_hal_linux.cpp  serial_hal_windows.cpp
examples/05-ntp-sntp-sync/: CMakeLists.txt  README.md  ntp_adapter.cpp  ntp_adapter.hpp  ntp_ptp_sync_example.cpp
examples/06-dcf77-terrestrial-radio/: CMakeLists.txt  README.md  dcf77_adapter.cpp  dcf77_adapter.hpp  dcf77_ptp_sync_example.cpp
examples/07-rtc-module/: CMakeLists.txt  rtc_adapter.cpp  rtc_adapter.hpp  rtc_ptp_sync_example.cpp
examples/08-multi-source-bmca/: CMakeLists.txt  multi_source_sync_example.cpp
examples/09-esp32-rtc-integration/: README.md  main.cpp  platformio.ini
examples/10-esp32-gps-rtc-bmca/: platformio.ini
examples/11-esp32-ptp-grandmaster/: README.md  main.cpp  platformio.ini  pps_handler_esp32.hpp
examples/12-RasPi5_i226-grandmaster/: ARCHITECTURE.md  CMakeLists.txt  DEVICE_CONFIGURATION.md  HARDWARE_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  PHC-DRIFT-ANALYSIS.md  PROJECT_STATUS.md  RASPBERRY_PI_BUILD.md  README.md  REFACTORED_VALIDATION_PLAN.md  REMOTE_DEBUGGING.md  RTC_DRIFT_DISCIPLINE_INTEGRATION_COMPLETE.md  SLAVE-TESTING-GUIDE.md  TAI-UTC-FIX-README.md  TDD_ROADMAP.md  bp.md  build.sh  configure-rtc-sqw.sh  deb.fefinement.md  deb.holdover.md  deb.md  refactoring-progress.md
examples/12-intel-avb-windows/: CMakeLists.txt  README.md  intel_avb_hal.cpp  (+9 more)
tests/: CMakeLists.txt  test_default_ds_init.cpp  test_foreign_master_list_red.cpp  test_foreign_master_pruning_verify.cpp  test_health_snapshot.cpp  test_management_tlv_red.cpp  test_messages_validate.cpp  test_offset_calc_red.cpp  test_offset_calculation_red.cpp  test_offset_clamp_boundary.cpp  test_p2p_delay_red.cpp  test_pdelay_mechanism_red.cpp  test_profile_params_red.cpp  test_rounding_bias.cpp  test_signaling_message_red.cpp  test_simple_coverage_boost.cpp  test_state_machine_basic.cpp  test_state_machine_heuristic_negative.cpp  test_time_properties_dataset_red.cpp  test_transparent_clock_red.cpp  test_transparent_clock_simple.cpp  test_types_timestamp.cpp
(+1330 files in other folders)
